--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     </div>
   </template>
 
-  <script type="text/javascript" src="js/main.js" defer></script>
+  <script type="module" src="js/main.js" defer></script>
 
 </body>
 </html>
